@@ -25,7 +25,8 @@ Changes with Apache 2.5.0
 
   *) The following now respect DefaultRuntimeDir/DEFAULT_REL_RUNTIMEDIR:
      - APIs: ap_log_pid(), ap_remove_pid, ap_read_pid()
-     - core: the scoreboard (ScoreBoardFile) and pid file (PidFile)
+     - core: the scoreboard (ScoreBoardFile), pid file (PidFile), and
+       mutexes (Mutex)
      - mod_lbmethod_heartbeat, mod_heartmonitor: heartbeat storage file
      - mod_socache_shmcb, mod_socache_dbm: shared memory or dbm for cache
      [Jeff Trawick]
